--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="Tray_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Tray_Icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Tray_Menu_Bar_Dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tray_Menu_Bar_Dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Tray_Menu_Bar_Light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Tray_Menu_Bar_Light.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
